<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:elevation="20dp"
    tools:context=".customerview.AddReminders">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-169dp"
        android:background="@drawable/newbg1">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="86dp"
            android:layout_height="72dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/backBtnAddReminders"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/backbutton"
                android:rotation="180"
                android:translationX="30dp"
                android:translationY="95dp"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title_settings"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="Add Reminders"
                android:textAllCaps="true"
                android:textColor="#068B2E"
                android:textSize="25sp"
                android:translationX="80dp"
                android:translationY="93dp"
                android:typeface="sans"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="150dp"
                android:background="@drawable/rectangle"
                android:clickable="false"
                android:contentDescription="@string/background"
                android:elevation="5dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/reminder_heading"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentofsettings"
            android:fontFamily="@font/sf_pro_display"
            android:text="Title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:translationX="42dp"
            android:translationY="190dp" />
        <EditText
            android:id="@+id/editTextTitleAddReminders"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:translationY="220dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="42dp"
            android:layout_marginLeft="42dp"
            android:padding="10dp"
            android:hint="type the title.."
            android:background="#8AC9C9C9"/>

        <ImageView
            android:id="@+id/line"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:translationY="250dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/reminder1_heading"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentofsettings"
            android:fontFamily="@font/sf_pro_display"
            android:text="Description"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:translationX="42dp"
            android:translationY="280dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextDescriptionAddReminders"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="42dp"
            android:background="#8AC9C9C9"
            android:hint="type the description.."
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:translationY="320dp" />
        <ImageView
            android:id="@+id/line2"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:translationY="420dp"
            android:layout_marginTop="015dp"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/reminder2_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/contentofsettings"
            android:fontFamily="@font/sf_pro_display"
            android:text="Date"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:translationX="42dp"
            android:translationY="460dp"/>

        <EditText
            android:id="@+id/editTextDateAddReminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginRight="42dp"
            android:background="#8AC9C9C9"
            android:hint="10/24/2023"
            android:inputType="text"
            android:padding="10dp"
            android:translationY="455dp" />

        <TextView
            android:id="@+id/reminder_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/contentofsettings"
            android:fontFamily="@font/sf_pro_display"
            android:text="Time"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:translationX="42dp"
            android:translationY="520dp" />

        <EditText
            android:id="@+id/editTextTimeAddReminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginRight="42dp"
            android:background="#8AC9C9C9"
            android:hint="8.00 AM"
            android:inputType="text"
            android:padding="10dp"
            android:translationY="515dp" />

        <Button
            android:id="@+id/saveBtnAddReminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="188dp"
            android:background="#068B2E"
            android:elevation="5dp"
            android:padding="15dp"
            android:text="Save Changes"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:translationY="610dp" />

    </FrameLayout>



</RelativeLayout>